Startup script should not send Java to the background.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@231128 13f79535-47bb-0310-9956-ffa450edef68